--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8100
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example
